<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/edit_a_phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:id="@+id/textView"
        android:textSize="28sp"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/phrase_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:id="@+id/textView7"
        android:textSize="26sp"
        android:textStyle="normal|bold" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/textView7"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:id="@+id/etEditPhraseID"
        android:textSize="18sp"
        android:inputType="number" />

    <TextView
        android:text="@string/phrase_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEditPhraseID"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:id="@+id/textView8"
        android:textStyle="normal|bold"
        android:textSize="26sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:layout_below="@+id/textView8"
        android:layout_alignStart="@+id/etEditPhraseID"
        android:layout_marginTop="31dp"
        android:id="@+id/etEditPhraseTitle" />

    <TextView
        android:text="@string/phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etEditPhraseTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:id="@+id/textView9"
        android:textSize="26sp"
        android:textStyle="normal|bold" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@+id/textView9"
        android:layout_alignEnd="@+id/etEditPhraseTitle"
        android:layout_marginTop="24dp"
        android:id="@+id/etEditPhrase"
        android:inputType="text" />
</RelativeLayout>