<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/add_a_phrase_to_the_database"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:id="@+id/textView2"
        android:textStyle="normal|bold"
        android:textSize="28sp" />

    <TextView
        android:text="@string/phrase_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:id="@+id/textView3"
        android:textSize="26sp"
        android:textStyle="normal|bold" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:layout_marginTop="43dp"
        android:id="@+id/etPhraseTitle"
        android:textSize="18sp"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="@string/phrase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPhraseTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="59dp"
        android:id="@+id/textView4"
        android:textSize="26sp"
        android:textStyle="normal|bold" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:layout_below="@+id/textView4"
        android:layout_alignStart="@+id/etPhraseTitle"
        android:layout_marginTop="52dp"
        android:id="@+id/etPhrase" />

</RelativeLayout>